need root addition

--- a/init.d/netif.tmpl
+++ b/init.d/netif.tmpl
@@ -75,9 +75,8 @@ die() {
 	eend 1 "$*"; exit 1
 }
 
-depend() {
-	config "$settings"
-}
 
 . /etc/netif.d/common.sh
+config "$settings"
+need root
 . $src_template
