--- a/init.d/netif.tmpl
+++ b/init.d/netif.tmpl
@@ -177,7 +177,7 @@ ezroute() {
 	# This function processes a semi-colon delimited list of routes set in $route, and also
 	# supports the $gateway variable for setting a default IP route. 
 	local rest="$route"
-	[ -n "$gateway" ] && rest="$rest; default via $gateway"
+	[ -n "$gateway" ] && rest="$rest; default via $gateway dev $interface"
 	if [ -n "$rest" ]; then
 		# must end in a semi-colon before we start processing:
 		rest="$rest;"
