--- a/init.d/netif.tmpl
+++ b/init.d/netif.tmpl
@@ -178,10 +178,10 @@ ezroute() {
 	# supports the $gateway variable for setting a default IP route. 
 	local rest
 	if [ "$1" = "4" ]; then
-		rest ="$route"
+		rest=$route"
 		[ -n "$gateway" ] && rest="$rest; default via $gateway dev $interface"
 	elif [ "$1" = "6" ]; then
-		rest = "$route6"
+		rest="$route6"
 		[ -n "$gateway6" ] && rest="$rest; default via $gateway6 dev $interface"
 	fi
 	if [ -n "$rest" ]; then
