--- a/init.d/netif.tmpl
+++ b/init.d/netif.tmpl
@@ -147,16 +147,19 @@ get_ipnm_part() {
 	echo "${1%%;*}"
 }
 
+# if_ipv4 will accept something like 1.2.3.4/24;broadcast=1.2.3.255 and return a non-null string
+# if the address appears to be an ipv4 address.
+
+if_ipv4() {
+	echo "${1%%/*}" | awk '/[0-9]*\.[0-9]*\.[0-9]*\.[0-9]*/ {print $1}'
+}
+
 # we encode the broadcast like this: 1.2.3.4/24;broadcast=1.2.3.255;foo=bar;x;y;z
 # we call the following function like this:
 # 'get_option "$ipnm" broadcast +'
 # it will return "1.2.3.255" if defined, and a '+' if not defined.
 # 'get_option "1.2.3.4;a;b;c" a false' will return 'true' if "a" is defined as a keyword, and "false" (default value)
 # otherwise.
-
-if_ipv4() {
-	echo "${1%%/*}" | awk '/[0-9]*\.[0-9]*\.[0-9]*\.[0-9]*/ {print $1}'
-}
 
 get_option() {
 	local full="$1"
