--- a/init.d/netif.tmpl
+++ b/init.d/netif.tmpl
@@ -98,6 +98,9 @@ start() {
 	fi
 	ip addr flush dev $interface scope global > /dev/null 2>&1
 	netif_pre_up
+	if [ -n "$mac_replace" ]; then
+		ip link set dev interface address $mac_replace || die "Couldn't set MAC to $mac_replace."
+	fi
 	debug ip link set $interface up
 	if [ -n "$mtu" ]; then
 		ip link set $interface mtu $mtu
