--- a/init.d/netif.tmpl
+++ b/init.d/netif.tmpl
@@ -73,13 +73,14 @@ debug() {
 depend() {
 	need localmount
 	if [ "$vlanmode" != "off" ]; then
-		if [ "${trunk#netif.}" != "${trunk}" ]; then
-			#begins with netif
+		local initPath="/etc/init.d/"
+		if [ -f "${initPath}netif.${trunk}" ]; then # test for netif. prefix
 			need "netif.${trunk}"
+		elif [ -f "${initPath}net.${trunk}" ]; then # test for net. prefix
+			need "net.${trunk}"
 		else
-			# New-style scripts should have trunk point to the actual script name
-			need "${trunk}"
-		fi
+			need "$trunk" # New-style scripts should have trunk point to the actual script name
+		fi	
 	fi
 	if [ -n "$gateway" ] || [ -n "$gateway6" ]; then
 		provide net
