fix dhcp option
Add -b and -t0 options for $DHCPC.
Without -b, wifi interface will fail to start, because dhcpc is started
before, for example, wpa_supplicant and can't get network settings.
Without -t0, there is probably not enough time for dhcpc to get network
settings, because wpa_supplicant can work longer than we expect.

--- a/init.d/netif.tmpl
+++ b/init.d/netif.tmpl
@@ -263,7 +263,7 @@ ezdhcp() {
 		if [ -f "${DHCPC_PIDFILE}" ]; then
 			die "There's a PID file for interface $interface. Aborting."
 		fi
-		$DHCPC $interface
+		$DHCPC -b -t0 $interface
 	else
 		if [ ! -f "${DHCPC_PIDFILE}" ]; then
 			die "There's no PID file for interface ${interface}. Aborting."
