So I am trying to add this ability to allow things like slaves="" to refer to "netif.*" interfaces (which have corresponding initscripts) and also "regular" interfaces (such as an interface created by zerotier) which would have no initscript, and then have a bridge add these slaves correctly, and also optionally depend on the initscript (only if it exists.) Using filter_interface_names() to remove "raw" interfaces with no initscript.

--- a/init.d/netif.tmpl
+++ b/init.d/netif.tmpl
@@ -87,7 +87,7 @@ depend() {
 	if [ -n "$gateway" ] || [ -n "$gateway6" ]; then
 		provide net
 	fi
-	[ -n "$slaves" ] && need $slaves
+	[ -n "$slaves" ] && need $(filter_interface_names $slaves)
 	[ -n "$bridge" ] && need $bridge
 	netif_depend
 }
@@ -260,6 +260,15 @@ get_interface_names() {
 		echo ${ifn#netif.}
 	done
 }
+
+# This removes any non-netif interface names from a list:
+
+filter_interface_names() {
+	for ifn in $*; do
+		[ "${ifn#netif.}" != "${ifn}" ] && echo "$ifn"
+	done
+}
+
 
 # We are migrating from having trunk=eth0 to trunk=net.eth0. This following function is used to implement backwards
 # compatibility. If we see $trunk existing in /etc/init.d, then we assume it has a net. or netif. prefix we need to
