Pull request #8: FL-11927: `dhcpcd` networking scripts should look in `/var/run/dhcpcd` for pid-files
Merge in CORE/corenetwork from ~CUANTAR/corenetwork:bugfix/FL-11927-core-kit-init-scripts-should-put-pid-files-in-var-run-subdirs to master

Squashed commit of the following:

commit fe83092b43aa932a5868d17869b54703d50c3c03
Author: Kevin P. Wilson <kpwilson@pm.me>
Date:   Mon Jan 8 14:12:15 2024 -0500

    change deprecated `/var/run` to `/run`

commit 2a883987c1cc8097e797d64b2cd7f09baa52a012
Author: Kevin P. Wilson <kpwilson@pm.me>
Date:   Thu Dec 28 21:52:36 2023 +0000

    revert change for `dhclient` as the manpage says it doesn't use a subdir

commit 639658353f3d15b9e9be96fb2da0a9db7de8cbc8
Author: Kevin P. Wilson <kpwilson@pm.me>
Date:   Thu Dec 28 21:50:11 2023 +0000

    changes to location of dhcpcd and dhclient pid-files

--- a/init.d/netif.tmpl
+++ b/init.d/netif.tmpl
@@ -24,7 +24,7 @@ STARTD="Network $DESC2 $CYAN$interface$OFF up"
 STOPD="Network $DESC2 $CYAN$interface$OFF down"
 if [ "$dhcp" = "yes" ]; then
 	DHCPC=${DHCPC:-"/sbin/dhcpcd"}
-	DHCPC_PIDFILE="/var/run/dhcpcd-${interface}.pid"
+	DHCPC_PIDFILE="/run/dhcpcd/${interface}.pid"
 	if [ ! -f "${DHCPC}" ]; then
 		echo "dhcpcd binary not found. Did you emerge net-misc/dhcpcd?"
 		exit 1
